--- a/package.json
+++ b/package.json
@@ -15,30 +15,31 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
-    "@telegram-apps/sdk-react": "^3.3.7",
-    "@telegram-apps/telegram-ui": "^2.1.9",
-    "@tonconnect/ui-react": "^2.3.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.3"
+    "@telegram-apps/sdk-react": "^3.3.9",
+    "@telegram-apps/telegram-ui": "^2.1.13",
+    "@tonconnect/ui-react": "^2.4.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^20.19.17",
-    "@types/react": "^19.1.15",
-    "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
-    "@vitejs/plugin-react-swc": "^4.1.0",
+    "@eslint/js": "^9.39.2",
+    "@types/node": "^20.19.30",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "@vitejs/plugin-react-swc": "^4.2.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.36.0",
+    "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.4.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.1",
-    "vite": "^7.1.7",
-    "vite-plugin-mkcert": "^1.17.8",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.5.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
+    "vite": "^7.3.1",
+    "vite-plugin-mkcert": "^1.17.9",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
